# acr122u-websocket

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
acr122u_websocket/: app.py  my_reader.py  nfc_websocket.py  reader_helpers.py
acr122u_websocket/templates/: test.html
nfc_websocket/: my_reader.py  reader_helpers.py
nfc_websocket/templates/: test.html
