[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acr122u-websocket"
version = "1.0.1"
description = "A webserver that connects to a acr122u and exposes it over websocket"
readme = "README.md"
authors = [{ name = "Robert van Dijk", email = "contact@robertvandijk.nl" }]
license = { file = "pb" }
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["nfc", "acr", "acr122u", "websocket", "web"]
dependencies = [
    'flask',
    'flask-socketio',
    'py-acr122u',
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "bumpver",
]

[project.urls]
Homepage = "https://github.com/robertdijk/acr122u-websocket"

[tool.bumpver]
current_version = "1.0.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "Bump version {old_version} -> {new_version}"
commit = true
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"',
]
"acr122u_websocket/__init__.py" = ["{version}"]
